--- a/client/src/pages/classroom/classroom.css
+++ b/client/src/pages/classroom/classroom.css
@@ -1,4 +1,4 @@
-.course{
+.room{
   flex:4;padding: 20px;
 }
 .courseTitleContainer {
@@ -13,4 +13,28 @@
   font-weight: 600;
   font-size: 20px;
 
+}
+/* Clear floats after the columns */
+.row {
+  content: "";
+  display: flex;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+  float:left;
 }
